Change default page

--- a/lib/live_view_patch_web/templates/layout/app.html.eex
+++ b/lib/live_view_patch_web/templates/layout/app.html.eex
@@ -28,7 +28,7 @@
     <%= render @view_module, @view_template, assigns %>
   </main>
   <%= csrf_meta_tag() %>
-  <script type="text/javascript" src="<%= Routes.static_path(@conn, '/js/app.js') %>"></script>
+  <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
 </body>
 
 </html>
